crates/parser/tests/snapshots/blank_line_in_prefix_block.snap
---
source: crates/parser/tests/snapshots.rs
---
# blank-line-in-prefix-block

## Input

```
s {
  a 1

  b 2
}

```

## CST

```
SOURCE_FILE@0..19
  PREFIX_BLOCK@0..19
    WORD_KEY@0..1
      WORD@0..1 "s"
    SPACE@1..2 " "
    OPEN_BRACE@2..3 "{"
    NEWLINE@3..4 "\n"
    SPACE@4..6 "  "
    ENTRY@6..10
      WORD_KEY@6..7
        WORD@6..7 "a"
      SPACE@7..8 " "
      INTEGER@8..9
        NUMERAL@8..9 "1"
      NEWLINE@9..10 "\n"
    NEWLINE@10..11 "\n"
    SPACE@11..13 "  "
    ENTRY@13..17
      WORD_KEY@13..14
        WORD@13..14 "b"
      SPACE@14..15 " "
      INTEGER@15..16
        NUMERAL@15..16 "2"
      NEWLINE@16..17 "\n"
    CLOSE_BRACE@17..18 "}"
    NEWLINE@18..19 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        PrefixBlock {
            key: WordKey {
                word: WORD@0..1 "s",
            },
            open_brace: OPEN_BRACE@2..3 "{",
            items: [
                Entry {
                    key: WordKey {
                        word: WORD@6..7 "a",
                    },
                    value: Integer {
                        sign: none,
                        numeral: NUMERAL@8..9 "1",
                    },
                },
                Entry {
                    key: WordKey {
                        word: WORD@13..14 "b",
                    },
                    value: Integer {
                        sign: none,
                        numeral: NUMERAL@15..16 "2",
                    },
                },
            ],
            close_brace: CLOSE_BRACE@17..18 "}",
        },
    ],
}
```

vim:ft=markdown
