crates/parser/tests/snapshots/blank_lines_between_entries.snap
---
source: crates/parser/tests/snapshots.rs
---
# blank-lines-between-entries

## Input

```
a 1

b 2
   
c 3

```

## CST

```
SOURCE_FILE@0..17
  ENTRY@0..4
    WORD_KEY@0..1
      WORD@0..1 "a"
    SPACE@1..2 " "
    INTEGER@2..3
      NUMERAL@2..3 "1"
    NEWLINE@3..4 "\n"
  NEWLINE@4..5 "\n"
  ENTRY@5..9
    WORD_KEY@5..6
      WORD@5..6 "b"
    SPACE@6..7 " "
    INTEGER@7..8
      NUMERAL@7..8 "2"
    NEWLINE@8..9 "\n"
  SPACE@9..12 "   "
  NEWLINE@12..13 "\n"
  ENTRY@13..17
    WORD_KEY@13..14
      WORD@13..14 "c"
    SPACE@14..15 " "
    INTEGER@15..16
      NUMERAL@15..16 "3"
    NEWLINE@16..17 "\n"
```

## AST

```
SourceFile {
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..1 "a",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@2..3 "1",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@5..6 "b",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@7..8 "2",
            },
        },
        Entry {
            key: WordKey {
                word: WORD@13..14 "c",
            },
            value: Integer {
                sign: none,
                numeral: NUMERAL@15..16 "3",
            },
        },
    ],
}
```

vim:ft=markdown
