crates/parser/tests/snapshots/block_string_0_folded_clip_emptyln_eof.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-0-folded-clip-emptyln-eof

## Input

```
key >


```

## CST

```
SOURCE_FILE@0..7
  ENTRY@0..6
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..6
      BLOCK_STRING_HEADER@4..6
        GT@4..5 ">"
        NEWLINE@5..6 "\n"
  NEWLINE@6..7 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: none,
                },
                lines: [],
            },
        },
    ],
}
```

vim:ft=markdown
