crates/parser/tests/snapshots/block_string_0_folded_clip_none_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-0-folded-clip-none-dedent

## Input

```
key >
other val

```

## CST

```
SOURCE_FILE@0..16
  ENTRY@0..6
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..6
      BLOCK_STRING_HEADER@4..6
        GT@4..5 ">"
        NEWLINE@5..6 "\n"
  ENTRY@6..16
    WORD_KEY@6..11
      WORD@6..11 "other"
    SPACE@11..12 " "
    LINE_STRING@12..15
      STRING@12..15 "val"
    NEWLINE@15..16 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: none,
                },
                lines: [],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@6..11 "other",
            },
            value: LineString {
                string: STRING@12..15 "val",
            },
        },
    ],
}
```

vim:ft=markdown
