crates/parser/tests/snapshots/block_string_0_folded_keep_emptyln_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-0-folded-keep-emptyln-dedent

## Input

```
key >+

other val

```

## CST

```
SOURCE_FILE@0..18
  ENTRY@0..8
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..7
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        PLUS@5..6 "+"
        NEWLINE@6..7 "\n"
    NEWLINE@7..8 "\n"
  ENTRY@8..18
    WORD_KEY@8..13
      WORD@8..13 "other"
    SPACE@13..14 " "
    LINE_STRING@14..17
      STRING@14..17 "val"
    NEWLINE@17..18 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: PLUS@5..6 "+",
                },
                lines: [],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@8..13 "other",
            },
            value: LineString {
                string: STRING@14..17 "val",
            },
        },
    ],
}
```

vim:ft=markdown
